--- a/jquery_frame/index.html
+++ b/jquery_frame/index.html
@@ -5,6 +5,7 @@
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 	<title>首页</title>
 	<link rel="stylesheet" href="css/vpMain.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	
@@ -19,7 +20,7 @@
 		<ul class="clearfix">
 			<li ui-sref="sign">1</li>
 			<li ui-sref="login">2</li>
-			<li ui-sref="page3">3</li>
+			<li ui-sref="meteor">3</li>
 			<li ui-sref="page4">4</li>
 		</ul>
 	</div>
