--- a/www/index.html
+++ b/www/index.html
@@ -25,9 +25,9 @@
 		</ul>
 	</div>
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/loadScript.js"></script>
-	<script src="js/vpMain.js"></script>
+	<script src="src/jquery.min.js"></script>
+	<script src="src/loadScript.js"></script>
+	<script src="src/vpMain.js"></script>
 	<script> _vp.index() </script>
 </body>
 </html>
