--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 	<title>首页</title>
-	<link rel="stylesheet" href="css/vpMain.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	
