--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 			<li ui-sref="sign">1</li>
 			<li ui-sref="login">2</li>
 			<li ui-sref="meteor">3</li>
-			<li ui-sref="page4">4</li>
+			<li class="goSign">4</li>
 		</ul>
 	</div>
 
