--- a/www/index.html
+++ b/www/index.html
@@ -20,11 +20,12 @@
 			<li ui-sref="sign">1</li>
 			<li ui-sref="login">2</li>
 			<li ui-sref="meteor">3</li>
-			<li class="goSign">4</li>
+			<li class="goSign" ui-sref="sign">4</li>
 		</ul>
 	</div>
 
 	<script src="src/jquery.min.js"></script>
+	<script src="src/iscroll.js"></script>
 	<script src="src/loadScript.js"></script>
 	<script src="src/vpMain.js"></script>
 	<script> _vp.index() </script>
