--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 	</div>
 
 	<script src="src/jquery.min.js"></script>
-	<script src="src/iscroll.js"></script>
+	<script src="src/iscroll-probe.js"></script>
 	<script src="src/loadScript.js"></script>
 	<script src="src/vpMain.js"></script>
 	<script> _vp.index() </script>
